// Fixes page scaling issue on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 	flex-direction: column;
 	align-content: center;
 	height: 100%;
-	width: 100%;
+	max-width: 100vw;
 	overflow: hidden;
 }
 #intro {
@@ -45,7 +45,6 @@ html, body {
 	animation: fadeOut 2.6s, spin 2.6s both;
 	animation-timing-function: ease-in;
 }
-
 #main {
 	display: none;
 	background-color: black;
@@ -54,25 +53,48 @@ html, body {
 	align-items: center;
 	justify-self: center;
 	justify-content: space-between;
+	max-height: 100%;
 	transition: background-color 7.5s;
 	animation: fadeIn 7.5s;
 }
-
-
+#cityVideo {
+	display: flex;
+	flex: 1 1 0;
+	align-self: center;
+	justify-self: center;
+	max-width: 100%;
+	max-height: 100%
+}
+video {
+	display: flex;
+	flex: 1 1 1;
+	align-self: center;
+	justify-self: center;
+	max-width: 100%;
+	max-height: 100%
+}
 .message-list {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 	width: 50vw;
 }
-
+#rick {
+	transform: scaleX(-1);
+}
+#convo {
+	display: flex;
+	flex-direction: column;
+}
 #portfolio {
-	width: 66vw;
+	width: 75vw;
 }
 
 #foot {
 	display: flex;
 	justify-content: space-evenly;
-	width: 100vw;
+	width: 90vw;
 }
 
 .nes-badge {
